# ChangeLog for net-nds/phpldapadmin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/phpldapadmin/ChangeLog,v 1.59 2014/04/11 01:39:57 jmbsvicetto Exp $

  11 Apr 2014; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  -phpldapadmin-1.2.0.4-r1.ebuild, -phpldapadmin-1.2.0.5.ebuild,
  -phpldapadmin-1.2.1.1-r1.ebuild, -phpldapadmin-1.2.1.1.ebuild,
  -phpldapadmin-1.2.2-r1.ebuild, -phpldapadmin-1.2.2.ebuild:
  Remove old versions.

*phpldapadmin-1.2.3-r1 (11 Apr 2014)

  11 Apr 2014; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +files/phpldapadmin-fix-php5.5-support.patch, +phpldapadmin-1.2.3-r1.ebuild:
  Add a patch to allow phpldapadmin to build against php-5.5. Bump to EAPI 5.
  Fixes bug 482340 - thanks to Alexander Stein.

*phpldapadmin-1.2.3 (12 Nov 2012)

  12 Nov 2012; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +phpldapadmin-1.2.3.ebuild:
  [net-nds/phpldapadmin] Version 1.2.3 bump.

*phpldapadmin-1.2.2-r1 (02 Feb 2012)

  02 Feb 2012; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +phpldapadmin-1.2.2-r1.ebuild, +files/phpldapadmin-1.2.2-base.patch:
  [net-nds/phpldapadmin-1.2.2-r1] Apply security patch to fix XSS issue - fixes
  bug 401901.

*phpldapadmin-1.2.2 (05 Jan 2012)

  05 Jan 2012; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +phpldapadmin-1.2.2.ebuild:
  [net-nds/phpldapadmin] 1.2.2 version bump - fixes bug #395513.

*phpldapadmin-1.2.1.1-r1 (25 Oct 2011)

  25 Oct 2011; <atlantis@gentoo.org> +phpldapadmin-1.2.1.1-r1.ebuild,
  +files/phpldapadmin-1.2.1.1-fix-cmd-exploit.patch,
  +files/phpldapadmin-1.2.1.1-fix-functions-exploit.patch:
  [net-nds/phpldapadmin] Package bump to apply security fixes for bug 388349.

*phpldapadmin-1.2.1.1 (20 Oct 2011)

  20 Oct 2011; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +phpldapadmin-1.2.1.1.ebuild,
  +files/phpldapadmin-1.2.1.1-fix-magic-quotes.patch, metadata.xml: